Revert "Issue #3062389 by josephleon, colan: Fixed log message spillage."
This reverts commit ebfa6355121de5a32c9a9f2a361b62b97eac6080.

--- a/style.css
+++ b/style.css
@@ -965,8 +965,6 @@ table.hosting-table td {
   padding:4px 5px 5px;
   border-top:1px solid #fff;
   position:relative;
-  max-width: 440px;
-  word-wrap: break-word;
   }
 
 .modalframe .ui-dialog-titlebar,
